css/patchgraph.css
.axis path,
.axis line {
    fill: none;
    stroke: black;
    shape-rendering: crispEdges;
}

.axis text {
    font-family: sans-serif;
    font-size: 11px;
}

.icon {
    height: 30px;
    width: 30px;
    
}

rect:hover {
    fill: grey;
}

#tooltip {
    position: absolute;
    width: 425px;
    height: auto;
    padding: 10px;
    text-align: center;
    background-color: white;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
    pointer-events: none;
}

#tooltip.hidden {
    display: none;
}

#tooltip p {
    margin: 0;
    font-family: sans-serif;
    font-size: 16px;
    line-height: 20px;
}

.bgcolor {
    pointer-events:none;
    border: solid 2px black;
}

#graph {
    height: 300px;
    border: solid 1px black;
}

/*svg {
    background: #b0e0f8;
    float: left;
}*/

.legendBar {
    pointer-events: none;
    z-index: -2;
}

.labels {
    pointer-events:none;
    /*text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;*/
}

.boutlink{
    margin-top: 5px;
    height: 40px;
    width: 225px;
}

